@@ -35,7 +35,7 @@
 
     <div class="status-bar__content__item hide-xs">Load: <span class="">{{ load1 }}</span>/<span class="">{{ load5 }}</span>/<span class="">{{ load15 }}</span></div>
 
-    <div ng-if="enterprise && user != ''" class= "status-bar__user">
+    <div ng-if="enterprise && userName != ''" class= "status-bar__user">
       <i class="fa fa-2x fa-user"></i>
       <div>{{userName}}</div>
     </div>
